# HumbleBTATracker

./: README.md
HumbleBTATracker/: pom.xml
HumbleBTATracker/src/core/: BackupAgent.java  Check.java  Compact.java  DB.java  HBStat.java  Main.java  StatCollector.java  TrendStat.java
humble_btatracker_rust/: Cargo.toml
humble_btatracker_rust/src/: main.rs
humble_btatracker_rust/src/scraper/: collector.rs
humble_btatracker_rust/src/util/: db.rs  mod.rs  trend.rs
